--- a/Lyyneheym/Lyyneheym/Lyyneheym.csproj
+++ b/Lyyneheym/Lyyneheym/Lyyneheym.csproj
@@ -99,6 +99,9 @@
       <Name>LyyneheymCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="ImageAssets\MessageTria.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
