--- a/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
+++ b/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
@@ -49,6 +49,9 @@
     <Compile Include="SlyviaCore\Scene.cs" />
     <Compile Include="SlyviaCore\SceneManager.cs" />
     <Compile Include="SlyviaCore\SpiritContainer.cs" />
+    <Compile Include="SlyviaPile\CandidateFunction.cs" />
+    <Compile Include="SlyviaPile\LL1ParseMap.cs" />
+    <Compile Include="SlyviaPile\SyntaxTreeNode.cs" />
     <Compile Include="SlyviaPile\Token.cs" />
     <Compile Include="Utils\IOUtils.cs" />
     <Compile Include="SlyviaPile\Lexer.cs" />
