--- a/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
+++ b/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
@@ -51,6 +51,7 @@
     <Compile Include="SlyviaCore\SpiritContainer.cs" />
     <Compile Include="SlyviaPile\CandidateFunction.cs" />
     <Compile Include="SlyviaPile\LL1ParseMap.cs" />
+    <Compile Include="SlyviaPile\Pile.cs" />
     <Compile Include="SlyviaPile\SyntaxTreeNode.cs" />
     <Compile Include="SlyviaPile\Token.cs" />
     <Compile Include="Utils\IOUtils.cs" />
