修正一些Parser的错误，增加动作类

--- a/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
+++ b/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
@@ -47,6 +47,7 @@
     <Compile Include="SlyviaCore\ResourceManager.cs" />
     <Compile Include="SlyviaCore\RuntimeManager.cs" />
     <Compile Include="SlyviaCore\Scene.cs" />
+    <Compile Include="SlyviaCore\SceneAction.cs" />
     <Compile Include="SlyviaCore\SceneManager.cs" />
     <Compile Include="SlyviaCore\SpiritContainer.cs" />
     <Compile Include="SlyviaPile\CandidateFunction.cs" />
