增加了函数类

--- a/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
+++ b/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
@@ -50,6 +50,7 @@
     <Compile Include="SlyviaCore\RuntimeManager.cs" />
     <Compile Include="SlyviaCore\Scene.cs" />
     <Compile Include="SlyviaCore\SceneAction.cs" />
+    <Compile Include="SlyviaCore\SceneFunction.cs" />
     <Compile Include="SlyviaCore\SceneManager.cs" />
     <Compile Include="SlyviaCore\SpiritContainer.cs" />
     <Compile Include="SlyviaPile\CandidateFunction.cs" />
