--- a/Lyyneheym/SlyviaInterpreter/SlyviaInterpreter.csproj
+++ b/Lyyneheym/SlyviaInterpreter/SlyviaInterpreter.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InterpreterException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CandidateFunction.cs" />
     <Compile Include="Lexer.cs" />
