--- a/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
+++ b/Lyyneheym/LyyneheymCore/LyyneheymCore.csproj
@@ -44,6 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ILPackage\ILConvertor.cs" />
     <Compile Include="ILPackage\SceneAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SlyviaCore\MusicianContainer.cs" />
@@ -53,7 +54,7 @@
     <Compile Include="ILPackage\SceneFunction.cs" />
     <Compile Include="SlyviaCore\SceneManager.cs" />
     <Compile Include="SlyviaCore\SpiritContainer.cs" />
-    <Compile Include="SlyviaCore\Consta.cs" />
+    <Compile Include="SlyviaCore\GlobalDataContainer.cs" />
     <Compile Include="SlyviaCore\SymbolTable.cs" />
     <Compile Include="Utils\IOUtils.cs" />
     <Compile Include="Utils\PackageUtils.cs" />
