--- a/Lyyneheym/LyynePacker/LyynePacker.csproj
+++ b/Lyyneheym/LyynePacker/LyynePacker.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PackageUtils.cs" />
     <Compile Include="UserPackerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,12 +76,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LyyneheymCore\LyyneheymCore.csproj">
-      <Project>{8332154c-d355-4333-918d-ec915bf69846}</Project>
-      <Name>LyyneheymCore</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
