--- a/Lyyneheym/Lyyneheym/Lyyneheym.csproj
+++ b/Lyyneheym/Lyyneheym/Lyyneheym.csproj
@@ -54,6 +54,7 @@
     <Compile Include="LyyneheymCore\ILPackage\ILConvertor.cs" />
     <Compile Include="LyyneheymCore\ILPackage\SceneAction.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\GlobalDataContainer.cs" />
+    <Compile Include="LyyneheymCore\SlyviaCore\MessageLayer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\MusicianContainer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\MySprite.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\ResourceManager.cs" />
