运行时表达式值的计算

--- a/Lyyneheym/Lyyneheym/Lyyneheym.csproj
+++ b/Lyyneheym/Lyyneheym/Lyyneheym.csproj
@@ -57,6 +57,7 @@
     <Compile Include="LyyneheymCore\SlyviaCore\MessageLayer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\MusicianContainer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\MySprite.cs" />
+    <Compile Include="LyyneheymCore\SlyviaCore\PolishItem.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\ResourceManager.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\RuntimeManager.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\Scene.cs" />
