--- a/Lyyneheym/Lyyneheym/Lyyneheym.csproj
+++ b/Lyyneheym/Lyyneheym/Lyyneheym.csproj
@@ -62,6 +62,7 @@
     <Compile Include="LyyneheymCore\ILPackage\ILConvertor.cs" />
     <Compile Include="LyyneheymCore\ILPackage\SceneAction.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\GlobalDataContainer.cs" />
+    <Compile Include="LyyneheymCore\SlyviaCore\Interrupt.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\MessageLayer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\Musician.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\MySprite.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="LyyneheymCore\SlyviaCore\SceneFunction.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\SpiritContainer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\SpriteAnimation.cs" />
+    <Compile Include="LyyneheymCore\SlyviaCore\SpriteButton.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\StackMachine.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\StackMachineFrame.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\SymbolTable.cs" />
