--- a/Lyyneheym/Lyyneheym/Lyyneheym.csproj
+++ b/Lyyneheym/Lyyneheym/Lyyneheym.csproj
@@ -76,6 +76,7 @@
     <Compile Include="LyyneheymCore\SlyviaCore\SpiritContainer.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\SpriteAnimation.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\SpriteButton.cs" />
+    <Compile Include="LyyneheymCore\SlyviaCore\SpriteButtonDescriptor.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\SpriteDescriptor.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\StackMachine.cs" />
     <Compile Include="LyyneheymCore\SlyviaCore\StackMachineFrame.cs" />
