--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="Transitionals">
+      <HintPath>.\Transitionals.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -88,7 +91,7 @@
     <Compile Include="PlatformCore\SymbolTable.cs" />
     <Compile Include="PlatformCore\UpdateRender.cs" />
     <Compile Include="PlatformCore\ViewManager.cs" />
-    <Compile Include="Utils\DebugUtils.cs" />
+    <Compile Include="Utils\CommonUtils.cs" />
     <Compile Include="Utils\IOUtils.cs" />
     <Compile Include="Utils\PackageUtils.cs" />
     <Compile Include="Director.cs" />
