--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -56,6 +56,7 @@
     <Compile Include="HalationCore\CodeManager.cs" />
     <Compile Include="HalationCore\FileManager.cs" />
     <Compile Include="HalationCore\HalationSymbol.cs" />
+    <Compile Include="HalationCore\ScenePackage.cs" />
     <Compile Include="YuriForms\BranchForm.cs">
       <SubType>Form</SubType>
     </Compile>
