--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -53,10 +53,14 @@
     </ApplicationDefinition>
     <Compile Include="Halation.cs" />
     <Compile Include="HalationCore\CodeGenerator.cs" />
-    <Compile Include="HalationCore\CodeManager.cs" />
     <Compile Include="HalationCore\FileManager.cs" />
     <Compile Include="HalationCore\HalationSymbol.cs" />
-    <Compile Include="HalationCore\ScenePackage.cs" />
+    <Compile Include="ScriptPackage\ActionPackage.cs" />
+    <Compile Include="ScriptPackage\ArgumentPackage.cs" />
+    <Compile Include="ScriptPackage\FunctionPackage.cs" />
+    <Compile Include="ScriptPackage\ProjectPackage.cs" />
+    <Compile Include="ScriptPackage\ScenePackage.cs" />
+    <Compile Include="ScriptPackage\VariablePackage.cs" />
     <Compile Include="YuriForms\BranchForm.cs">
       <SubType>Form</SubType>
     </Compile>
