--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -51,10 +51,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\HalationInvoker.cs" />
+    <Compile Include="Command\IHalationCommand.cs" />
     <Compile Include="Halation.cs" />
     <Compile Include="HalationCore\CodeGenerator.cs" />
     <Compile Include="HalationCore\FileManager.cs" />
-    <Compile Include="HalationCore\HalationSymbol.cs" />
     <Compile Include="ScriptPackage\ActionPackage.cs" />
     <Compile Include="ScriptPackage\ArgumentPackage.cs" />
     <Compile Include="ScriptPackage\FunctionPackage.cs" />
